--- a/app/src/main/res/layout/item_name.xml
+++ b/app/src/main/res/layout/item_name.xml
@@ -8,14 +8,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/user_photo"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/item_title_name"
+        />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/item_title_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/user_photo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/item_title_last_name"
-        android:textSize="30sp"
+        android:textSize="15sp"
         tools:text="Hola"/>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -25,8 +34,20 @@
         app:layout_constraintStart_toEndOf="@id/item_title_name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="30sp"
+        android:textSize="15sp"
         tools:text="Adios"
+        />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/birth_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/item_title_name"
+        app:layout_constraintStart_toStartOf="@id/item_title_name"
+        app:layout_constraintEnd_toEndOf="@id/item_title_last_name"
+        android:textSize="15sp"
+        android:text="birth date"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
