fully implemented bind function

--- a/app/src/main/res/layout/item_name.xml
+++ b/app/src/main/res/layout/item_name.xml
@@ -39,7 +39,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/birth_date"
+        android:id="@+id/item_title_birth_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
