--- a/app/src/main/res/layout/item_name.xml
+++ b/app/src/main/res/layout/item_name.xml
@@ -10,11 +10,20 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/user_photo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/item_title_name"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/options_icon_view"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="@id/user_photo"
+        app:layout_constraintEnd_toEndOf="@id/user_photo"
+        android:background="@drawable/options_icon"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -22,32 +31,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/user_photo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/item_title_last_name"
-        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/user_photo"
+        app:layout_constraintEnd_toStartOf="@+id/like_icon_view"
+        android:textSize="20sp"
         tools:text="Hola"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/item_title_last_name"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/like_icon_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/item_title_name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="15sp"
-        tools:text="Adios"
+        android:background="@drawable/like_icon"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="@id/item_title_name"
+        app:layout_constraintEnd_toStartOf="@id/comment_icon_view"
         />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/item_title_birth_date"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/comment_icon_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/item_title_name"
-        app:layout_constraintStart_toStartOf="@id/item_title_name"
-        app:layout_constraintEnd_toEndOf="@id/item_title_last_name"
-        android:textSize="15sp"
-        android:text="birth date"
+        android:background="@drawable/comment_icon"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="15dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="@id/item_title_name"
+        app:layout_constraintEnd_toEndOf="@id/user_photo"
         />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
